# OpenEinstein

./: .env.example  .gitignore  AGENT-SETUP-INSTRUCTIONS.md  AGENTS.md  BUILD-READY.md  CONTRIBUTING.md  MANIFEST.in  OpenEinstein-Implementation-Plan.md  README.md  openeinstein-wireframes.html  package.json  pyproject.toml
.github/workflows/: ci.yml
Development Resources/: Agent-Best-Practices.md  How-To-Build-Skills-for-Claude.md  Repo-Setup-Best-Practices.md  Review-and-Audit.md  Testing-Strategy.md  Validation-Passes.md  mcp-architecture-guide.md
Walkthrough/: E2E-Walkthrough-Guide.md
campaign-packs/: README.md
campaign-packs/_marketplace/: manifest-schema.json
campaign-packs/modified-gravity-action-search/: campaign.yaml  literature-seed.yaml
campaign-packs/scalar-tensor-lab/: campaign.yaml
campaigns/example-action-search/: campaign.yaml
configs/: POLICY.json  compaction.yaml  lanes.yaml  openeinstein.example.yaml  tool-profiles.yaml  webhooks.yaml
configs/trusted-keys/: README.md
docs/: ARCHITECTURE.md  CHANGELOG.md  UI-UX-STRATEGY.md  campaign-pack-authoring.md  configuration-reference.md  trust-model.md
docs/audits/: README.md  phase-1-audit.md  phase-2-audit.md  phase-3-audit.md  phase-4-audit.md  phase-5-audit.md  phase-6-audit.md  phase-7-audit.md  production-audit-a.md  production-audit-b.md  production-audit-c.md  production-audit-release.md  ui-epic-audit.md
docs/build-plans/: OpenClaw-Integration-DevPlan.md  README.md  integration-contract-ledger.md  production-runner-cutover.md
docs/canonical/: _index.md  campaign-engine.md  cas-backends.md  cli-interface.md  core-architecture.md  gateway-control-plane.md  literature-infrastructure.md  model-routing.md  multi-agent-orchestration.md  personality.md  security-model.md  tool-bus.md  tracing-and-evals.md
docs/decisions/: README.md
docs/development-plans/: README.md
docs/development_plan/: EPIC-OC-OpenClaw-Integration.md
docs/epics/: EPIC-001-control-ui.md  README.md
docs/research/: OpenClaw-Research.md  README.md
evals/: persona-baseline.yaml
scripts/: setup-dev-environment.sh  sync-control-ui-assets.py  verify-production-profile.py
src/openeinstein/: __init__.py
tests/: conftest.py
tests/evals/: test_persona_evals.py
tests/integration/: test_adaptive_sampling_integration.py  test_ads_connector.py  test_arxiv_mcp.py  test_cadabra_mcp.py  test_campaign_config_integration.py  test_campaign_crash_recovery.py  test_campaign_state_integration.py  test_cli_commands.py  test_compaction_integration.py  test_computation_agent_integration.py  test_concurrent_campaign.py  test_context_report_cli_integration.py  test_control_plane_cli_integration.py  test_crossref_mcp.py  test_dashboard_api_contract_integration.py  test_dashboard_api_v2_integration.py  test_dashboard_app_integration.py  test_dashboard_cli_integration.py  test_dashboard_ws_integration.py  test_eval_cli_integration.py  test_gate_pipeline_integration.py  test_grobid_ingestion.py  test_harness_integration.py  test_hooks_integration.py  test_inspire_connector.py  test_known_models_e2e.py  test_latex_toolchain.py  test_literature_agent_integration.py  test_mathematica_mcp.py  test_modified_gravity_pack.py  test_multi_provider_routing.py  test_orchestrator_integration.py  test_pack_cli_integration.py  test_packaging_install.py  test_python_sandbox.py  test_registry_mcp.py  test_report_generation_integration.py  test_routing_integration.py  test_scanner_mcp.py  test_security_audit.py  (+12 more)
tests/production/: __init__.py  test_campaign_pack_extensibility.py  test_crash_resume_replay.py  test_full_agent_loop_e2e.py  test_policy_enforcement_end_to_end.py  test_quickstart_install_e2e.py  test_runner_lifecycle_contract.py  test_subjective_intent_evals.py  test_three_live_provider_qualification.py
tests/unit/: test_adaptive_sampling.py  test_ads_server.py  test_agent_base.py  test_arxiv_server.py  test_campaign_config.py  test_campaign_state.py  test_circuit_breaker.py  test_cli_lanes.py  test_compaction.py  test_computation_agent.py  test_concurrent_state.py  test_context_pins.py  test_control_plane.py  test_crossref_server.py  test_evals.py  test_gate_pipeline.py  test_gateway_budget.py  test_grobid_server.py  test_harness.py  test_hooks.py  test_idempotency.py  test_inspire_server.py  test_known_models_truth_table.py  (+31 more)
ui/: package.json  pnpm-lock.yaml  vite.config.ts
(+159 files in other folders)
